--- a/.htaccess
+++ b/.htaccess
@@ -14,6 +14,7 @@ FileETag MTime Size
 
 	RewriteRule ^(403|404|500)$ /index.php [R=302,L]
 
+	RewriteRule ^refetch$ /refetch.php [QSA,L]
 	RewriteRule ^thumbnail/(.*/.*)$ /thumbnail.php?src=$1 [QSA,L]
 	RewriteRule ^watermark/(.*/.*)$ /watermark.php?src=$1 [QSA,L]
 	
